--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Explore Detroit API</title>
+  <title>Feed Me API</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -10,7 +10,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Explore Detroit API</a>
+    <a class="navbar-brand" href="#">Feed Me API</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -19,9 +19,9 @@
 
   <main role="main" class="container">
     <div class="jumbotron">
-      <h1 class="display-1">Explore Detroit API</h1>
+      <h1 class="display-1">Feed Me API</h1>
       <p class="lead">
-        Documentation on the API Endpoints that are exposed by the Explore Detroit API.
+        Documentation on the API Endpoints that are exposed by the Feed Me API.
       </p>
     </div>
   </main>
